@@ -14,7 +14,7 @@ from Exscript.FooLib import UrlParser
 True  = 1
 False = 0
 
-__version__ = '0.9.11'
+__version__ = '0.9.12'
 
 def usage():
     print "Exscript %s" % __version__
@@ -200,7 +200,7 @@ def run(*args, **kwargs):
     # Load the code into the exscript.
     try:
         exscript.load(exscript_content,
-                      debug     = options['parser-verbose'],
+                      verbose   = options['parser-verbose'],
                       no_prompt = options['no-prompt'])
     except Exception, e:
         if options['verbose'] > 0:
